WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26081
Reproducible crash in TimeRanges::copy() at openvideo.dailymotion.com
https://bugs.webkit.org/show_bug.cgi?id=26081
Summary
Reproducible crash in TimeRanges::copy() at openvideo.dailymotion.com
lars.sonchocky-helldorf
Reported
2009-05-29 10:25:53 PDT
I get a crash for
r44201
at
http://openvideo.dailymotion.com/de/featured/channel/news/video/x9e0tu_euromaxx-the-truth-about-germany_people
and all the other videos on
http://openvideo.dailymotion.com/
(subpages) see attached crashlog
Attachments
crashlog for bug 26081
(32.12 KB, text/plain)
2009-05-29 10:29 PDT
,
lars.sonchocky-helldorf
no flags
Details
crash log for 10.4.11 PPC
(27.25 KB, text/plain)
2009-05-29 11:08 PDT
,
lars.sonchocky-helldorf
no flags
Details
patch v1.
(3.00 KB, patch)
2009-06-02 12:07 PDT
,
Pierre d'Herbemont
darin
: review+
Details
Formatted Diff
Diff
patch 2.
(3.28 KB, patch)
2009-06-02 16:47 PDT
,
Pierre d'Herbemont
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
lars.sonchocky-helldorf
Comment 1
2009-05-29 10:29:57 PDT
Created
attachment 30779
[details]
crashlog for
bug 26081
crashlog attached
lars.sonchocky-helldorf
Comment 2
2009-05-29 10:34:45 PDT
o.k.
http://openvideo.dailymotion.com/de/channel/sport/featured
seems to work
lars.sonchocky-helldorf
Comment 3
2009-05-29 11:08:24 PDT
Created
attachment 30780
[details]
crash log for 10.4.11 PPC another crash log for PPC on Tiger
Alexey Proskuryakov
Comment 4
2009-05-30 02:35:13 PDT
<
rdar://problem/6934752
>
Pierre d'Herbemont
Comment 5
2009-06-02 12:07:31 PDT
Created
attachment 30879
[details]
patch v1.
Pierre d'Herbemont
Comment 6
2009-06-02 16:47:54 PDT
Created
attachment 30886
[details]
patch 2. This time with a layout test that is a real HTML document.
Eric Carlson
Comment 7
2009-06-04 10:00:50 PDT
http://trac.webkit.org/changeset/44415
lars.sonchocky-helldorf
Comment 8
2009-06-05 10:11:14 PDT
I am missing the file video-test.js (which is referenced in before-load-member-access.html) in your commit. Without that file I just get a ReferenceError: Can't find variable: findMediaElement when I open before-load-member-access.html with
r44410
but no crash (this version should still crash since the crash was fixed not before
r44415
-shouldn't it?) I think the testcase is "toothless" without video-test.js btw. it looks like dailymotion fixed/changed their code since I no longer get a crash even with
r44410
Eric Carlson
Comment 9
2009-06-05 10:26:08 PDT
video-tests.js is not new to this check-in, it is used by most of the media layout tests:
http://trac.webkit.org/browser/trunk/LayoutTests/media/video-test.js
lars.sonchocky-helldorf
Comment 10
2009-06-05 16:29:55 PDT
(In reply to
comment #9
)
> video-tests.js is not new to this check-in, it is used by most of the media > layout tests: >
http://trac.webkit.org/browser/trunk/LayoutTests/media/video-test.js
>
Sorry for the turmoil, I wasn't aware of this. But now I can confirm that the bug is fixed as of
r44438
for both PPC and Intel (after running the testcase manually).
Mark Rowe (bdash)
Comment 11
2009-06-08 16:12:07 PDT
***
Bug 26261
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug