2009-06-04  Pierre d'Herbemont  <pdherbemont@apple.com>

Reviewed by Darin Adler.

        Test: media/before-load-member-access.html

        https://bugs.webkit.org/show_bug.cgi?id=26081

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::played): Ensure that if m_playedTimeRanges,
        is not initialized we return a valid range, and don't attempt to use it.

2009-06-04  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=26081

        * media/before-load-member-access-expected.txt: Added.
        * media/before-load-member-access.html: Test access for property accessed before
        loading occurs. That tests for 26081 crasher specifically.



Canonical link: https://commits.webkit.org/36246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44415 268f45cc-cd09-0410-ab3c-d52691b4dbfc